# elp

./: .gitignore  Cargo.toml  GOALS.md  README.md
.github/workflows/: rust.yml
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: elp.pest  lib.rs  parser.rs
crates/parser/src/ast/: block.rs  elp_type.rs  enum.rs  export.rs  expression.rs  for_loop.rs  function.rs  ident.rs  import.rs  mod.rs  module.rs  number.rs  number_value.rs  object.rs  string.rs  traits.rs  value_assignment.rs  variable_access.rs  variable_assignment.rs  variable_declaration.rs
crates/parser/src/cst/: README.md  block.rs  component.rs  elp_type.rs  enum.rs  export.rs  expression.rs  for_loop.rs  function.rs  ident.rs  if_tree.rs  import.rs  interface.rs  match.rs  mod.rs  number_value.rs  object.rs  string.rs  unary.rs  value_assignment.rs  variable_access.rs  variable_assignment.rs  variable_declaration.rs
examples/BlogStyle/: Package.elp  main.velp  styles.selp
examples/BlogStyle/components/: paragraph.velp
examples/BlogStyle/internal/: api.elp
examples/BlogStyle/screens/: about.velp  home.velp
examples/ChatRoom/: main.velp
examples/ChatRoom/components/: login-form.velp  message.velp
examples/ChatRoom/state/: app.elp
examples/ChatRoom/types/: chat.elp
examples/ElpLauncher/: Package.elp
examples/Graph/: Package.elp
examples/Graph/lib/: dag.elp  dag.test.elp
